--- a/SpringBootBlog/src/main/resources/application.yml
+++ b/SpringBootBlog/src/main/resources/application.yml
@@ -1,20 +1,25 @@
 spring:
+  #Druid
   datasource:
    type: com.alibaba.druid.pool.DruidDataSource 
    url: jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
    username: root
    password: 852025
    driver-class-name: com.mysql.cj.jdbc.Driver
-   initialization-mode: never
+   initialization-mode: never  
    druid:
       initial-size: 10
       max-active: 100
       time-between-eviction-runs-millis: 60000
       max-wait: 60000
+   #pagehelper     data:    mongodb:      host: localhost
+      port: 27017
+      database: springbootblog
 pagehelper:
   helper-dialect: mysql
   reasonable: true
   page-size-zero: true
   support-methods-arguments: true
   params: count=countSql
+  #log
 logging:  level:    com.zyd.blog.mapper: debug  
