feat: 整合Minio实现文件管理
初步完成文件上传、删除模块

Signed-off-by: zyd100 <1019661738@qq.com>

--- a/SpringBootBlog/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/SpringBootBlog/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -1,24 +1,53 @@
-{
-	"properties": [
-		{
-			"name": "jwt",
-			"type": "java.lang.String",
-			"description": "jwt Ïà¹ØÉèÖÃ"
-		},
-		{
-			"name": "jwt.secret",
-			"type": "java.lang.String",
-			"description": "jwt token ÃÜÔ¿"
-		},
-		{
-			"name": "jwt.expiration",
-			"type": "java.lang.Long",
-			"description": "jwt token ¹ýÆÚÊ±¼ä"
-		},
-		{
-			"name": "jwt.tokenHeader",
-			"type": "java.lang.Long",
-			"description": "jwt token ÇëÇóÍ·"
-		}
-	]
-}
+{"properties": [
+  {
+    "name": "jwt",
+    "type": "java.lang.String",
+    "description": "jwt "
+  },
+  {
+    "name": "jwt.secret",
+    "type": "java.lang.String",
+    "description": "jwt token headerå¤´"
+  },
+  {
+    "name": "jwt.expiration",
+    "type": "java.lang.Long",
+    "description": "jwt token è¿‡æœŸæ—¶é—´"
+  },
+  {
+    "name": "jwt.tokenHeader",
+    "type": "java.lang.Long",
+    "description": "jwt token headerå¤´"
+  },
+  {
+    "name": "minio",
+    "type": "java.lang.String",
+    "description": "A description for 'minio'"
+  },
+  {
+    "name": "minio.secret",
+    "type": "java.lang.String",
+    "description": "A description for 'minio'"
+  },
+  {
+    "name": "minio.bucketName",
+    "type": "java.lang.String",
+    "description": "A description for 'minio'"
+  },
+  {
+    "name": "minio.accessKey",
+    "type": "java.lang.String",
+    "description": "A description for 'minio'"
+  },
+  {
+    "name": "minio.secretKey",
+    "type": "java.lang.String",
+    "description": "A description for 'minio'"
+  },
+  {
+    "name": "minio",
+    "type": "java.lang.String",
+    "description": "A description for 'minio'"
+  }
+  
+]}
