--- a/SpringBootBlog/pom.xml
+++ b/SpringBootBlog/pom.xml
@@ -20,6 +20,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- Minio -->
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>3.0.10</version>
+		</dependency>
 		<!-- web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
